edit index.html, add app.js request logic

--- a/web/index.html
+++ b/web/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oleksandr</title>
+    <title>Oleksandr GraphQL</title>
 </head>
 <body>
-    <div>Here is a first body element</div>
-    <p>little paragrapg</p>
+    <h1>GraphQL client</h1>
+    <p>
+        The Server says: <i id="responseField">Loading....</i>
+    </p>
+
+    <script src="app.js"></script>
 </body>
 </html>
