Test changes to index.html file

--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,7 @@
     <p>
         The Server says: <i id="responseField">Loading....</i>
     </p>
+    <span>-----------------------</span>
 
     <script src="app.js"></script>
 </body>
